# CanViT-specialize

./: .envrc.crockett  .envrc.example  .envrc.nibi  .gitignore  LICENSE  README.md  pyproject.toml
canvit_probes/: __init__.py  metrics.py  segmentation.py
canvit_probes/datasets/: ade20k.py
canvit_probes/training/: utils.py
canvit_probes/training/ade20k/: __main__.py  common.py  config.py  eval_utils.py  features.py  loss.py  state.py  train_canvit.py  train_dinov3.py  viz.py
canvit_specialize/: __init__.py  metrics.py
canvit_specialize/datasets/: ade20k.py  in1k.py  in1k_dali.py
canvit_specialize/training/: utils.py
canvit_specialize/training/ade20k/: __main__.py  common.py  config.py  eval_utils.py  features.py  loss.py  state.py  train_canvit.py  train_dinov3.py  viz.py
canvit_specialize/training/gcp_in1k_clf_ft/: README.md  __init__.py  bench.py  setup_tpu.sh  shared.py  sky-bench.yaml  sky-train-imagenet.yaml  train_imagenet.py  training_utils.py  viz.py
canvit_specialize/training/in1k/: __main__.py  config.py  eval.py  extract.py  loss.py  naming.py  train.py
scripts/: push_finetuned.py  push_probe.py  push_probes.py  upload_utils.py
slurm/: env.sh  extract_in1k_dinov3.sbatch  setup.sh  smoke_test_cpu.sbatch  train_ade20k_canvit.sbatch  train_ade20k_dinov3.sbatch  train_in1k_dinov3.sbatch
tests/: test_in1k.py  test_loss.py  test_metrics.py  test_segmentation.py
