[project]
name = "canvit-specialize"
version = "0.1.0"
description = "Downstream-task training (probes, LP-FT) for CanViT, with task-specific datasets and metrics"
requires-python = ">=3.12"
dependencies = [
    "canvit-pytorch",
    "dinov3",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pillow>=10.0.0",
    "huggingface-hub>=0.20.0",
    "safetensors>=0.4.0",
    "timm>=1.0.0",
    "tyro>=1.0.0",
    "tqdm>=4.60.0",
    "comet-ml>=3.30.0",
    "matplotlib>=3.8.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "transformers>=4.50.0",
    "pypatree>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["canvit_specialize"]

[dependency-groups]
dev = [
    "basedpyright>=1.37.2",
    "pypatree>=0.4.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]

# Extra dependencies for canvit_specialize/training/gcp_in1k_clf_ft/ (IN1K finetuning
# on GCP TPU v6e). Not required for ADE20K probe training or DINOv3 IN1K probe training.
# Install only on the TPU VM that runs the finetuning job:
#     uv sync --group gcp-in1k-finetune
gcp-in1k-finetune = [
    # On Linux: pin exact +cpu local-version identifiers. The whl/cpu index
    # publishes multiple variants per release (torchvision==0.24.0+cpu AND
    # 0.24.0+e437e35) with DIFFERENT platform coverage; without a local-version
    # pin, uv picks 0.24.0+e437e35 for linux_x86_64 cpython3.12 and fails
    # install because that variant has no wheel for that platform (FAILED_SETUP
    # on Jobs 59/60 2026-04-16).
    # On macOS: the +cpu local-version doesn't exist on PyPI, so fall back to
    # the plain pin (already CPU-only on Darwin).
    "torch==2.9.0+cpu; sys_platform == 'linux'",
    "torch==2.9.0; sys_platform != 'linux'",
    "torchvision==0.24.0+cpu; sys_platform == 'linux'",
    "torchvision==0.24.0; sys_platform != 'linux'",
    "torch_xla[tpu]==2.9.0; sys_platform == 'linux'",
    "tfrecord",
]

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = ["ignore:Failed to initialize NumPy:UserWarning"]

[tool.basedpyright]
typeCheckingMode = "standard"

[tool.ruff]
line-length = 120

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
canvit-pytorch = { git = "https://github.com/m2b3/CanViT-PyTorch.git" }
dinov3 = { git = "https://github.com/yberreby/dinov3.git" }
# For the TPU finetune group, pull torch/torchvision from whl/cpu so the 4.3 GB
# of nvidia_* satellites (cublas, cudnn, nccl, nvjitlink, etc.) never land on
# a GPU-less TPU VM. Other groups + base install fall through to PyPI default,
# which for Linux x86_64 torch==2.9.0 IS the CUDA-12.8 build — correct for
# Nibi/crockett CUDA hosts.
torch = [
    { index = "pytorch-cpu", group = "gcp-in1k-finetune", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cpu", group = "gcp-in1k-finetune", marker = "sys_platform == 'linux'" },
]
